# iris_ml_api

./: README.md  docker-compose-test.yaml  docker-compose.yaml  justfile
api_testing/: README.md  locustfile.py
backend/: Dockerfile  README.md  final_model_1.0  pyproject.toml
backend/app/: main.py
backend/app/schemas/: observation_schema.py
backend/scripts/: prestart.sh
backend/tests/: conftest.py
backend/tests/api/: test_index.py  test_model_routes.py
model/: README.md  explore.ipynb  final_model  pyproject.toml  requirements.txt  train.ipynb
model/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
model/catboost_info/learn/: events.out.tfevents
