[tool.poetry]
name = "ml-backend"
version = "0.1.0"
description = ""
authors = ["Jakal02 <gitcontribs@eligrubbs.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.112.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
