[tool.poetry]
name = "ml-backend"
version = "0.1.0"
description = ""
authors = ["Jakal02 <gitcontribs@eligrubbs.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = {extras = ["standard"], version = "^0.112.1"}
catboost = "^1.2.5"
numpy = "1.26"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
