[tool.poetry]
name = "ml-model"
version = "0.1.0"
description = ""
authors = ["Jakal02 <gitcontribs@eligrubbs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
scikit-learn = "^1.5.1"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
catboost = "^1.2.5"
numpy = "1.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
